[gd_scene load_steps=17 format=3 uid="uid://ccoraajeeihxh"]

[ext_resource type="Script" path="res://entities/sword/sword.gd" id="1_ib2jh"]
[ext_resource type="PackedScene" uid="uid://caw6f0ivdb8wv" path="res://entities/sword/dead_sword.tscn" id="2_r7wwp"]
[ext_resource type="Texture2D" uid="uid://bfmeagsqxcf13" path="res://entities/sword/blade.png" id="3_57p8r"]
[ext_resource type="AudioStream" uid="uid://du2p2c7r5nvdh" path="res://entities/sword/thud.wav" id="4_lnia3"]
[ext_resource type="Shader" path="res://shaders/single_color_shaders/0_value.gdshader" id="5_2ox1v"]
[ext_resource type="Texture2D" uid="uid://da78uckowebar" path="res://entities/sword/sword.png" id="5_53fin"]
[ext_resource type="AudioStream" uid="uid://dgo5flgpeotux" path="res://entities/sword/sword_shing.wav" id="7_5h3wu"]
[ext_resource type="AudioStream" uid="uid://r1g8nscltge1" path="res://entities/sword/explosion.wav" id="8_0deah"]
[ext_resource type="AudioStream" uid="uid://43doc375aylt" path="res://entities/sword/pickaxe.wav" id="9_kj5gx"]
[ext_resource type="AudioStream" uid="uid://csnaef3ee6kdp" path="res://parent_level/clink.wav" id="9_nv7cf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1imvl"]
radius = 12.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0r8vg"]
radius = 20.0
height = 132.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oxwnj"]
radius = 16.0
height = 84.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aryx7"]
radius = 17.0
height = 62.0

[sub_resource type="SpriteFrames" id="SpriteFrames_f0o1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_53fin")
}],
"loop": false,
"name": &"bounce",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_53fin")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6cfv"]
shader = ExtResource("5_2ox1v")

[node name="Sword" type="RigidBody2D" groups=["sword", "unstickable"]]
position = Vector2(0, 1)
collision_layer = 8
collision_mask = 8
collision_priority = 2.08165e-12
gravity_scale = 0.8
center_of_mass_mode = 1
center_of_mass = Vector2(2.08167e-16, 35)
can_sleep = false
max_contacts_reported = 6
contact_monitor = true
linear_velocity = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_ib2jh")
dead_sword = ExtResource("2_r7wwp")
blade_visual_scene = ExtResource("3_57p8r")
world_shader_scene = ExtResource("5_2ox1v")

[node name="RigidShape" type="CollisionShape2D" parent="."]
z_index = 8
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_1imvl")
debug_color = Color(0.972549, 0, 0.435294, 0.419608)

[node name="EdgeEntityArea" type="Area2D" parent="." groups=["entityEdge"]]
collision_layer = 7
collision_mask = 7

[node name="EdgeEntityShape" type="CollisionShape2D" parent="EdgeEntityArea"]
shape = SubResource("CapsuleShape2D_0r8vg")

[node name="EdgeArea" type="Area2D" parent="." groups=["edge"]]
position = Vector2(0, -57)
collision_layer = 0
priority = 1

[node name="EdgeShape" type="CollisionShape2D" parent="EdgeArea"]
z_index = 2
position = Vector2(0, 36)
shape = SubResource("CapsuleShape2D_oxwnj")
one_way_collision_margin = 10.0

[node name="impulseSpot" type="Node2D" parent="."]
position = Vector2(0, 34)

[node name="BounceArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
collision_priority = 2.0
priority = 2

[node name="BounceShape" type="CollisionShape2D" parent="BounceArea"]
z_index = 2
position = Vector2(0, 34)
rotation = -3.13503
shape = SubResource("CapsuleShape2D_aryx7")
disabled = true

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_f0o1g")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -2
material = SubResource("ShaderMaterial_x6cfv")
position = Vector2(0, -16)
emitting = false
amount = 4
lifetime = 3.0
one_shot = true
explosiveness = 1.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(2.08165e-12, 600)
initial_velocity_min = 252.59
initial_velocity_max = 401.4
angular_velocity_min = -50.0
angular_velocity_max = 50.0
scale_amount_min = 10.0
scale_amount_max = 10.0

[node name="Audio" type="Node" parent="."]

[node name="ThudAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_lnia3")
volume_db = -5.0
pitch_scale = 1.3

[node name="ThudImpactFramesAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_lnia3")
volume_db = -10.0
pitch_scale = 2.5

[node name="CutAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_5h3wu")
volume_db = -10.0
pitch_scale = 0.7

[node name="BitExplosionAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_0deah")
volume_db = -15.0
max_polyphony = 2

[node name="ClinkSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_nv7cf")
volume_db = -15.0
max_polyphony = 2

[node name="ClunkSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_kj5gx")
volume_db = -5.0
pitch_scale = 0.9
max_polyphony = 2

[node name="Timer" type="Node" parent="."]

[node name="Stillness" type="Timer" parent="Timer"]
one_shot = true

[node name="AnimationTimer" type="Timer" parent="Timer"]
wait_time = 0.06
one_shot = true

[node name="AnimationOtherTimer" type="Timer" parent="Timer"]
wait_time = 0.08
one_shot = true

[node name="Impact" type="Timer" parent="Timer"]
wait_time = 0.08
one_shot = true

[node name="ImpactEnding" type="Timer" parent="Timer"]
wait_time = 0.02
one_shot = true

[node name="ImpactEndingLesser" type="Timer" parent="Timer"]
wait_time = 0.005
one_shot = true

[node name="Timer" type="Timer" parent="Timer"]
wait_time = 0.1
one_shot = true

[node name="BounceGrace" type="Timer" parent="Timer"]
wait_time = 0.01
one_shot = true

[node name="BounceActivation" type="Timer" parent="Timer"]
wait_time = 0.1

[node name="NoPlayerHit" type="Timer" parent="Timer"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="EdgeArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="EdgeArea" to="." method="_on_edge_area_area_entered"]
[connection signal="area_shape_entered" from="EdgeArea" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="EdgeArea" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="BounceArea" to="." method="_on_bounce_area_area_entered"]
[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_body_entered"]
